[package]
name = "object-store"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
hyper-idp = { git = "ssh://git@github.com/wavey-ai/hyper-idp" }
#object-api = { git = "ssh://git@github.com/wavey-ai/object-api" }
#storage = { git = "ssh://git@github.com/wavey-ai/storage.git" }
storage = { path = "../storage" }
object-api = { path = "../object-api" }
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { features = ["env-filter", "json"] }
